Added Dockerfile for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 # ====== Server Port ======
 # Local
-server.port=8080             
+# server.port=8080         
+
+server.port=80
 # ====== Local DB Connection ======
 server.servlet.context-path=/Evolve_Ev
-# spring.datasource.url=jdbc:postgresql://localhost:5432/evolve_vouchers  
-# spring.datasource.username=postgres
-# spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/evolve_vouchers  
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 
 # ====== Render PostgreSQL Connection ======
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # ====== Local Hibernate Settings ======
 spring.jpa.hibernate.ddl-auto=update
