Configured Render PostgreSQL connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,25 @@
 # ====== Server Port ======
 # Local
 # server.port=8080         
-
-server.port=80
 # ====== Local DB Connection ======
 server.servlet.context-path=/Evolve_Ev
-spring.datasource.url=jdbc:postgresql://localhost:5432/evolve_vouchers  
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# spring.datasource.url=jdbc:postgresql://localhost:5432/evolve_vouchers  
+# spring.datasource.username=postgres
+# spring.datasource.password=postgres
 
 
 # ====== Render PostgreSQL Connection ======
-# spring.datasource.url=${SPRING_DATASOURCE_URL}
-# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-d42aao95pdvs73f3maeg-a.oregon-postgres.render.com:5432/evolve_motocorp_db
+spring.datasource.username=evolve_motocorp_db_user
+spring.datasource.password=n9AA7Xqw6QiP0RioXJNfCWmcsr7TsYB1
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+
+server.port=8080
+
 
 # ====== Local Hibernate Settings ======
 spring.jpa.hibernate.ddl-auto=update
