--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,12 @@ server.servlet.context-path=/Evolve_Ev
 
 
 # ====== Render PostgreSQL Connection ======
-spring.datasource.url=jdbc:postgresql://dpg-d42aao95pdvs73f3maeg-a.oregon-postgres.render.com:5432/evolve_motocorp_db
+spring.datasource.url=jdbc:postgresql://dpg-d42aao95pdvs73f3maeg-a.oregon-postgres.render.com:5432/evolve_motocorp_db?sslmode=require
 spring.datasource.username=evolve_motocorp_db_user
 spring.datasource.password=n9AA7Xqw6QiP0RioXJNfCWmcsr7TsYB1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 
@@ -24,8 +25,8 @@ server.port=8080
 # ====== Local Hibernate Settings ======
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true                
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+# spring.devtools.restart.enabled=true
+# spring.devtools.livereload.enabled=true
 management.endpoints.web.exposure.include=*
 # ====== Server Port ======
 server.address=0.0.0.0
