--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,56 +1,29 @@
-# ====== Server Port ======
-# Local
-# server.port=8080         
-# ====== Local DB Connection ======
+# =========================================================
+# 🌐 EVOLVE.EV — Spring Boot Configuration
+# =========================================================
+
 server.servlet.context-path=/Evolve_Ev
-# spring.datasource.url=jdbc:postgresql://localhost:5432/evolve_vouchers  
-# spring.datasource.username=postgres
-# spring.datasource.password=postgres
-
-
-# ====== Render PostgreSQL Connection ======
-spring.datasource.url=jdbc:postgresql://dpg-d42aao95pdvs73f3maeg-a.oregon-postgres.render.com:5432/evolve_motocorp_db?sslmode=require
-spring.datasource.username=evolve_motocorp_db_user
-spring.datasource.password=n9AA7Xqw6QiP0RioXJNfCWmcsr7TsYB1
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-
-
-
+server.address=0.0.0.0
 server.port=8080
 
-
-# ====== Local Hibernate Settings ======
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true                
-# spring.devtools.restart.enabled=true
-# spring.devtools.livereload.enabled=true
+spring.jpa.show-sql=true
 management.endpoints.web.exposure.include=*
-# ====== Server Port ======
-server.address=0.0.0.0
-
-
-
-
-# ====== Thymeleaf Templates (if used) ======
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.html
-
-# Allow larger files
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
 
+# =========================================================
+# 🌍 Default: Local Development
+# =========================================================
+spring.profiles.active=local
 
-# ====== Live Settings (Uncomment when deploying) ======
-
-# server.port=80             
-
-# spring.datasource.url=jdbc:postgresql://<LIVE_HOST>:5432/prod_vouchers  
-# spring.datasource.username=live_user
-# spring.datasource.password=live_pass
-
-# spring.jpa.hibernate.ddl-auto=validate  # Use validate in production
-# spring.jpa.show-sql=false               # Hide SQL in logs for performance
+# -------- Local Database --------
+spring.datasource.url=jdbc:postgresql://localhost:5432/evolve_vouchers
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# --------------------------------  
