--- a/pom.xml
+++ b/pom.xml
@@ -15,20 +15,23 @@
     <artifactId>evolve</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>evolve</name>
-    <description>Demo project for Spring Boot</description>
+    <description>EVOLVE.EV — Spring Boot Backend for Prebooking, Vouchers, and Payment</description>
 
     <properties>
         <java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
+
         <!-- Spring Boot Web Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Spring Boot JPA Starter -->
+        <!-- Spring Boot Data JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -41,7 +44,7 @@
             <version>3.1.0</version>
         </dependency>
 
-        <!-- PostgreSQL Driver -->
+        <!-- PostgreSQL JDBC Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -54,7 +57,7 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- Spring Boot Devtools -->
+        <!-- Spring Boot DevTools (Optional, Runtime only) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -62,10 +65,38 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Spring Security (for BCrypt) -->
+        <!-- Spring Security Crypto (for BCrypt Password Encoding) -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+
+        <!-- Razorpay Java SDK -->
+        <dependency>
+            <groupId>com.razorpay</groupId>
+            <artifactId>razorpay-java</artifactId>
+            <version>1.4.3</version>
+        </dependency>
+
+        <!-- Twilio API SDK -->
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>9.13.0</version>
+        </dependency>
+
+        <!-- Gson (JSON parsing and conversion) -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
+        <!-- JSON library (optional, safer than Android JSON) -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
         </dependency>
 
         <!-- Testing -->
@@ -74,28 +105,37 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-<dependency>
-  <groupId>com.razorpay</groupId>
-  <artifactId>razorpay-java</artifactId>
-  <version>1.4.3</version>
-</dependency>
-<dependency>
-  <groupId>com.twilio.sdk</groupId>
-  <artifactId>twilio</artifactId>
-  <version>9.13.0</version>
-</dependency>
 
-    
-      <dependency>
-        <groupId>com.google.code.gson</groupId>
-        <artifactId>gson</artifactId>
-        <version>2.8.5</version>
-      </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <!-- Prevent font & binary file filtering error -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.yml</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.html</include>
+                    <include>**/*.js</include>
+                    <include>**/*.css</include>
+                    <include>**/*.png</include>
+                    <include>**/*.jpg</include>
+                    <include>**/*.jpeg</include>
+                    <include>**/*.svg</include>
+                    <include>**/*.woff</include>
+                    <include>**/*.woff2</include>
+                    <include>**/*.ttf</include>
+                    <include>**/*.eot</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
-            <!-- Ensure Maven compiles for Java 21 -->
+
+            <!-- Java Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -105,13 +145,20 @@
                 </configuration>
             </plugin>
 
-            <!-- Spring Boot Plugin: version is aligned with parent (3.5.0) -->
+            <!-- Spring Boot Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
-            <!-- Exec Plugin for running HashGenerator -->
+            <!-- Exec Plugin (for utility classes if needed) -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -120,7 +167,23 @@
                     <mainClass>com.evolve.util.HashGenerator</mainClass>
                 </configuration>
             </plugin>
-            
+
         </plugins>
     </build>
+<profiles>
+    <profile>
+        <id>local</id>
+        <properties>
+            <spring.profiles.active>local</spring.profiles.active>
+        </properties>
+    </profile>
+
+    <profile>
+        <id>render</id>
+        <properties>
+            <spring.profiles.active>render</spring.profiles.active>
+        </properties>
+    </profile>
+</profiles>
+
 </project>
