--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -3,7 +3,7 @@
 # =========================================================
 server.servlet.context-path=/Evolve_Ev
 server.address=0.0.0.0
-server.port=${PORT:8080}  # Render injects PORT env variable
+server.port=8080
 
 spring.datasource.url=jdbc:postgresql://dpg-d42aao95pdvs73f3maeg-a.oregon-postgres.render.com:5432/evolve_motocorp_db?sslmode=require
 spring.datasource.username=evolve_motocorp_db_user
@@ -12,8 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 management.endpoints.web.exposure.include=*
-spring.profiles.active=render
